// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled basic render nested 1`] = `
<h1
  className="emotion-0 emotion-1"
>
  hello world
</h1>
`;

exports[`styled className prop on styled 1`] = `
<h1
  className="some-class emotion-0 emotion-1"
>
  hello world
</h1>
`;

exports[`styled no dynamic 1`] = `
<h1
  className="emotion-0 emotion-1"
>
  hello world
</h1>
`;

exports[`styled writes the correct css 1`] = `
".css-dae0kw{font-size:12px;}
.css-s9f816{font-size:20px;}.css-s9f816 span{color:blue;}.css-s9f816 span:hover{color:green;}.css-s9f816 span:hover:after{content:'after';}
.css-mdajr1{font-size:20px;}
html{background:pink;}
.css-14yvnlz{font-family:sans-serif;color:yellow;background-color:purple;}"
`;
